recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:18: error: type mismatch;
 found   : List[Int]
 required: Int
  } else return nlast(butLast(l),n-1)::last(l)::Nil
                                     ^